--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,22 @@
+# .github/workflows/deploy.yml
 name: Deploy to Vercel
 
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
+      - main  # Change to your default branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18  # or any version you use
 
       - name: Install dependencies
         run: npm install
@@ -28,7 +28,4 @@ jobs:
         run: npm install -g vercel
 
       - name: Deploy to Vercel
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: |
-          vercel --prod --token $VERCEL_TOKEN --yes
+        run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes
